add: add fonts, reset and style files.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odigio Travel</title>
+  <link rel="stylesheet" href="./css/reset/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Discover Amazing places in Japan</title>
 </head>
 <body>
   <h1>Odigio</h1>
+  <div class="item"></div>
 </body>
 </html>
