feat: create header block

--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
   <title>Discover Amazing places in Japan</title>
 </head>
 <body>
-  <h1>Odigio</h1>
-  <div class="item"></div>
+  <header class="header">
+    <div class="wrapper">
+      <div class="header-wrapper">
+        <div class="header-logo">
+          <a href="#" class="header-logo-link">
+            <img src="./assets/img/svg/odigo-Logo.svg" alt="Discover Amazing places in Japan" class="header-logo-pic">
+          </a>
+        </div>
+        <div class="header-nav">
+          <ul class="header-list">
+            <li class="header-list-item">
+              <a href="#!" class="header-list-link">Articles</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#!" class="header-list-link">Locations</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#!" class="header-list-link">Videos</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#!" class="header-list-link">Sign in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main class="main">
+    <section class="intro"></section>
+  </main>
 </body>
 </html>
