feat: add intro and benefits sections.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Discover Amazing places in Japan</title>
 </head>
 <body>
+
+  <!--HEADER-->
   <header class="header">
     <div class="wrapper">
       <div class="header-wrapper">
@@ -36,7 +38,62 @@
     </div>
   </header>
   <main class="main">
-    <section class="intro"></section>
+
+    <!--INTRO-->
+    <section class="intro">
+      <div class="wrapper">
+        <h1 class="intro-title">
+          Discover Amazing places in Japan
+        </h1>
+        <p class="intro-subtitle">
+          Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door.
+        </p>
+        <form action="" class="search-form">
+          <fieldset class="search-form-wrapper">
+            <p class="search-form-input">
+              <input type="text" name="user-like-to-do" class="search-form-field" placeholder="What would you like to do?">
+              <input type="text" name="user-like-to-go" class="search-form-field" placeholder="Where would you like to go?">
+              <button class="search-form-submit">SEARCH</button>
+            </p>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+
+    <!--BENEFITS-->
+    <section class="benefits">
+      <div class="wrapper">
+        <div class="benefits-wrapper">
+          <h2 class="benefits-title">Benefits of Odigo</h2>
+          <div class="benefits-cards">
+            <div class="benefits-card">
+              <div class="benefits-card-pic">
+                <img src="./assets/img/svg/church_icon.svg" alt="Welcome to Odigo!" class="benefits-card-thumb">
+              </div>
+              <h3 class="benefits-card-title">Welcome to Odigo!</h3>
+              <p class="benefits-card-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+              <a href="#" class="benefits-card-link">LEARN MORE</a>
+            </div>
+            <div class="benefits-card">
+              <div class="benefits-card-pic">
+              <img src="./assets/img/svg/person_icon.svg" alt="Your Personal Japan Guide" class="benefits-card-thumb">
+              </div>
+              <h3 class="benefits-card-title">Your Personal Japan Guide</h3>
+              <p class="benefits-card-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+              <a href="#" class="benefits-card-link">LEARN MORE</a>
+            </div>
+            <div class="benefits-card">
+              <div class="benefits-card-pic">
+                <img src="./assets/img/svg//building_icon.svg" alt="Promoting Local Businesses" class="benefits-card-thumb">
+              </div>
+              <h3 class="benefits-card-title">Promoting Local Businesses</h3>
+              <p class="benefits-card-text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+              <a href="#" class="benefits-card-link">LEARN MORE</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
