feat: add places section

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <p class="intro-subtitle">
           Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door.
         </p>
-        <form action="" class="search-form">
-          <fieldset class="search-form-wrapper">
-            <p class="search-form-input">
-              <input type="text" name="user-like-to-do" class="search-form-field" placeholder="What would you like to do?">
-              <input type="text" name="user-like-to-go" class="search-form-field" placeholder="Where would you like to go?">
-              <button class="search-form-submit">SEARCH</button>
+        <form action="" class="intro-search-form">
+          <fieldset class="intro-search-form-wrapper">
+            <p class="intro-search-form-input">
+              <input type="text" name="user-like-to-do" class="intro-search-form-field" placeholder="What would you like to do?">
+              <input type="text" name="user-like-to-go" class="intro-search-form-field" placeholder="Where would you like to go?">
+              <button class="intro-search-form-submit">SEARCH</button>
             </p>
           </fieldset>
         </form>
@@ -62,7 +62,7 @@
 
     <!--BENEFITS-->
     <section class="benefits">
-      <div class="wrapper">
+      <div class="wrapper-full">
         <div class="benefits-wrapper">
           <h2 class="benefits-title">Benefits of Odigo</h2>
           <div class="benefits-cards">
@@ -91,6 +91,53 @@
               <a href="#" class="benefits-card-link">LEARN MORE</a>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!--PLACES-->
+    <section class="places">
+      <div class="wrapper-full">
+        <div class="places-caption">
+          <h2 class="places-title">Get inspired for your next trip</h2>
+          <a href="#" class="places-caption-link">VIEW ALL</a>
+        </div>
+        <div class="places-cards">
+          <figure class="places-card places-card-size-lg">
+            <img src="./assets/img/mount-image.jpg" alt="mount" class="places-card-pic">
+            <figcaption class="places-card-title">
+              Mount Fuji
+            </figcaption>
+            <a href="#" class="places-card-link"></a>
+          </figure>
+          <figure class="places-card places-card-size-lg">
+            <img src="./assets/img/kyoto-image.jpg" alt="kyoto" class="places-card-pic">
+            <figcaption class="places-card-title">
+              Kyoto
+            </figcaption>
+            <a href="#" class="places-card-link"></a>
+          </figure>
+          <figure class="places-card places-card-size-sm">
+            <img src="./assets/img/tokyo-image.jpg" alt="tokyo" class="places-card-pic">
+            <figcaption class="places-card-title">
+              Tokyo
+            </figcaption>
+            <a href="#" class="places-card-link"></a>
+          </figure>
+          <figure class="places-card places-card-size-sm">
+            <img src="./assets/img/niigata-image.jpg" alt="niigata" class="places-card-pic">
+            <figcaption class="places-card-title">
+              Niigata
+            </figcaption>
+            <a href="#" class="places-card-link"></a>
+          </figure>
+          <figure class="places-card places-card-size-sm">
+            <img src="./assets/img/sapporo-image.jpg" alt="sapporo" class="places-card-pic">
+            <figcaption class="places-card-title">
+              Sapporo
+            </figcaption>
+            <a href="#" class="places-card-link"></a>
+          </figure>
         </div>
       </div>
     </section>
