feat: add tours section

--- a/index.html
+++ b/index.html
@@ -141,6 +141,49 @@
         </div>
       </div>
     </section>
+
+    <!--TOURS-->
+    <div class="tours"><!--не используем тег <section>, т.к. в этом блоке нет заголовка <h>-->
+      <div class="wrapper-full">
+        <div class="tours-tour-wrap"><!--создаем обертку для грид-контейнера-->
+          <div class="tour-pic">
+            <img src="./assets/img/tours1.jpg" alt="Tottori" class="tour-thumb">
+          </div>
+          <div class="tour-info">
+            <h3 class="tour-title">
+              Prefecture in Focus: Tottori
+            </h3>
+            <p class="tour-descr">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door.
+            </p>
+            <a href="#" class="tour-link">VIEW PREFECTURE</a>
+          </div>
+        </div>
+        <div class="tours-tour-wrap"><!--создаем обертку для грид-контейнера-->
+          <div class="tour-info">
+            <h3 class="tour-title">
+              Featured Neighborhood: Kyoto’s Arashiyama
+            </h3>
+            <p class="tour-descr">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door.
+            </p>
+            <a href="#" class="tour-link">VIEW NEIGHBORHOOD</a>
+          </div>
+          <div class="tour-pic">
+            <img src="./assets/img/tours2.jpg" alt="Kyoto’s Arashiyama" class="tour-thumb">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--TOP PLACES-->
+    <section class="top-places">
+      <div class="wrapper-full">
+        <div class="top-places-wrap"><!--создаем обертку для грид-контейнера-->
+          
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
