feat: add top-places section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header-wrapper">
         <div class="header-logo">
           <a href="#" class="header-logo-link">
-            <img src="./assets/img/svg/odigo-Logo.svg" alt="Discover Amazing places in Japan" class="header-logo-pic">
+            <img src="./assets/img/svg/odigo_logo.svg" alt="Discover Amazing places in Japan" class="header-logo-pic">
           </a>
         </div>
         <div class="header-nav">
@@ -179,8 +179,116 @@
     <!--TOP PLACES-->
     <section class="top-places">
       <div class="wrapper-full">
-        <div class="top-places-wrap"><!--создаем обертку для грид-контейнера-->
-          
+        <h2 class="top-places-title places-title">Today top places to visit</h2>
+        <div class="top-cards-wrap"><!--создаем обертку для грид-контейнера-->
+          <div class="top-card">
+            <div class="top-card-pic">
+              <img src="./assets/img/top_places_nagoya.jpg" alt="nagoya" class="top-card-thumb">
+              <div class="top-card-stats">
+                <h3 class="top-card-title">NAGOYA</h3>
+                <div class="top-card-likes">
+                  <span class="top-card-likes-value">555</span>
+                </div>
+                <div class="top-card-comments">
+                  <span class="top-card-comments-value">333</span>
+                </div>
+              </div>
+            </div>
+            <p class="top-card-text">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque ipsam atque esse debitis? Explicabo dolor voluptates accusantium cumque earum possimus vitae rerum facilis minus recusandae esse provident sapiente ut quia, blanditiis unde officiis laborum. Nostrum, aliquam? Dignissimos ea incidunt aliquam aspernatur ipsam voluptatem libero laudantium, distinctio dolore tempora cum quo!
+            </p>
+            <a href="#" class="top-card-button">SEE MORE</a>
+          </div>
+          <div class="top-card">
+            <div class="top-card-pic">
+              <img src="./assets/img/top_places_niigata.jpg" alt="NIIGATA" class="top-card-thumb">
+              <div class="top-card-stats">
+                <h3 class="top-card-title">NIIGATA</h3>
+                <div class="top-card-likes">
+                  <span class="top-card-likes-value">555</span>
+                </div>
+                <div class="top-card-comments">
+                  <span class="top-card-comments-value">333</span>
+                </div>
+              </div>
+            </div>
+            <p class="top-card-text">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt vitae a maxime, eos at voluptas, cupiditate architecto, perspiciatis dolore delectus exercitationem perferendis totam deleniti. Odio cumque exercitationem numquam ut aperiam.
+            </p>
+            <a href="#" class="top-card-button">SEE MORE</a>
+          </div>
+          <div class="top-card">
+            <div class="top-card-pic">
+              <img src="./assets/img/top_places_osaka.jpg" alt="OSAKA" class="top-card-thumb">
+              <div class="top-card-stats">
+                <h3 class="top-card-title">OSAKA</h3>
+                <div class="top-card-likes">
+                  <span class="top-card-likes-value">555</span>
+                </div>
+                <div class="top-card-comments">
+                  <span class="top-card-comments-value">333</span>
+                </div>
+              </div>
+            </div>
+            <p class="top-card-text">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#" class="top-card-button">SEE MORE</a>
+          </div>
+          <div class="top-card">
+            <div class="top-card-pic">
+              <img src="./assets/img/top_places_saitama.jpg" alt="SAITAMA" class="top-card-thumb">
+              <div class="top-card-stats">
+                <h3 class="top-card-title">SAITAMA</h3>
+                <div class="top-card-likes">
+                  <span class="top-card-likes-value">555</span>
+                </div>
+                <div class="top-card-comments">
+                  <span class="top-card-comments-value">333</span>
+                </div>
+              </div>
+            </div>
+            <p class="top-card-text">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#" class="top-card-button">SEE MORE</a>
+          </div>
+          <div class="top-card">
+            <div class="top-card-pic">
+              <img src="./assets/img/top_places_ueno.jpg" alt="UENO" class="top-card-thumb">
+              <div class="top-card-stats">
+                <h3 class="top-card-title">UENO</h3>
+                <div class="top-card-likes">
+                  <span class="top-card-likes-value">555</span>
+                </div>
+                <div class="top-card-comments">
+                  <span class="top-card-comments-value">333</span>
+                </div>
+              </div>
+            </div>
+            <p class="top-card-text">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#" class="top-card-button">SEE MORE</a>
+          </div>
+          <div class="top-card">
+            <div class="top-card-pic">
+              <img src="./assets/img/top_places_shibuya.jpg" alt="SHIBUYA" class="top-card-thumb">
+              <div class="top-card-stats">
+                <h3 class="top-card-title">SHIBUYA</h3>
+                <div class="top-card-likes">
+                  <span class="top-card-likes-value">555</span>
+                </div>
+                <div class="top-card-comments">
+                  <span class="top-card-comments-value">333</span>
+                </div>
+              </div>
+            </div>
+            <p class="top-card-text">
+              Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic vel quae veritatis doloribus facere. Aliquid?
+            </p>
+            <a href="#" class="top-card-button">SEE MORE</a>
+          </div>
         </div>
       </div>
     </section>
