feat: add video section and js file

--- a/index.html
+++ b/index.html
@@ -292,6 +292,17 @@
         </div>
       </div>
     </section>
+
+    <!--VIDEO-->
+      <div class="video">
+        <div class="video-wrapper">
+          <div class="video-format">
+          </div><!--ХУЙ ЗНАЕТ, КАК ЭТО РАБОТАЕТ, НО ЭТОТ БЛОК НЕОБХОДИМ, ЧТОБЫ ВИДЕО ПРОПОРЦИОНАЛЬНО МАСШТАБИРОВАЛОСЬ-->
+          <iframe class="video-item" src="https://www.youtube.com/embed/L5_vyBTKxso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen><!--убираем аттрибуты width и height для корректного отображения видео-->
+          </iframe>
+        </div>
+      </div>
   </main>
+  <script src="./js/main.js"></script>
 </body>
 </html>
