feat: add footer section

--- a/index.html
+++ b/index.html
@@ -294,15 +294,65 @@
     </section>
 
     <!--VIDEO-->
-      <div class="video">
+    <div class="video">
         <div class="video-wrapper">
-          <div class="video-format">
-          </div><!--ХУЙ ЗНАЕТ, КАК ЭТО РАБОТАЕТ, НО ЭТОТ БЛОК НЕОБХОДИМ, ЧТОБЫ ВИДЕО ПРОПОРЦИОНАЛЬНО МАСШТАБИРОВАЛОСЬ-->
+          <div class="video-format"><!--КТО ЗНАЕТ, КАК ЭТО РАБОТАЕТ, НО ЭТОТ БЛОК НЕОБХОДИМ, ЧТОБЫ ВИДЕО ПРОПОРЦИОНАЛЬНО МАСШТАБИРОВАЛОСЬ-->
+          </div>
           <iframe class="video-item" src="https://www.youtube.com/embed/L5_vyBTKxso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen><!--убираем аттрибуты width и height для корректного отображения видео-->
           </iframe>
         </div>
-      </div>
+    </div>
+
   </main>
+
+  <!--FOOTER-->
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footer-item">
+        <div class="footer-logo">
+          <img src="./assets/img/svg/footer_odigo_logo.svg" alt="odigo logo" class="footer-odigo-logo">
+        </div>
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <h3 href="#" class="footer-nav-title">Company</h3></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">About</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Team</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Careers</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Privacy Policy</a></li>
+          </ul>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <h3 href="#" class="footer-nav-title">Locations</h3></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Tokyo</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Kyoto</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Osaka</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Hokkaido</a></li>
+          </ul>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <h3 href="#" class="footer-nav-title">Social Media</h3></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Facebook</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Twitter</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Instagram</a></li>
+            <li class="footer-nav-item">
+              <a href="#" class="footer-nav-link">Youtube</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </footer>
   <script src="./js/main.js"></script>
 </body>
 </html>
