feat: add burger menu script

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="./assets/img/svg/odigo_logo.svg" alt="Discover Amazing places in Japan" class="header-logo-pic">
           </a>
         </div>
-        <div class="header-nav">
+        <nav class="header-nav">
           <ul class="header-list">
             <li class="header-list-item">
               <a href="#!" class="header-list-link">Articles</a>
@@ -33,6 +33,15 @@
               <a href="#!" class="header-list-link">Sign in</a>
             </li>
           </ul>
+          <div class="header-burger-close"><!--СОЗДАЕМ БУРГЕР МЕНЮ-->
+            <span class="header-burger-close-line"></span>
+            <span class="header-burger-close-line"></span>
+          </div>
+        </nav>
+        <div class="header-burger burger"><!--СОЗДАЕМ БУРГЕР МЕНЮ-->
+          <span class="burger-line burger-line-first"></span>
+          <span class="burger-line burger-line-second"></span>
+          <span class="burger-line burger-line-third"></span>
         </div>
       </div>
     </div>
